--- a/website/config/locales/flash.en.yml
+++ b/website/config/locales/flash.en.yml
@@ -2,7 +2,7 @@ en:
   flash:
     actions:
       create:
-        notice: "%{resource_name} has been created!"
+        notice: "%{resource_name} was successfully created."
       update:
         notice: "%{resource_name} was successfully updated."
       destroy:
