--- a/website/config/locales/flash.en.yml
+++ b/website/config/locales/flash.en.yml
@@ -8,3 +8,7 @@ en:
       destroy:
         notice: "%{resource_name} was successfully destroyed."
         alert: "{{resource_name}} could not be destroyed."
+    account:
+      profiles:
+        update_password:
+          notice: "Your password has been changed successfully."
