feat: add spec and host and assigned hosts to acccount

--- a/website/config/locales/flash.en.yml
+++ b/website/config/locales/flash.en.yml
@@ -7,7 +7,7 @@ en:
         notice: "%{resource_name} was successfully updated."
       destroy:
         notice: "%{resource_name} was successfully destroyed."
-        alert: "{{resource_name}} could not be destroyed."
+        alert: "%{resource_name} could not be destroyed."
     account:
       profiles:
         update_password:
